kubernetes/account-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-deployment
  labels:
    app: account
spec:
  replicas: 1
  selector:
    matchLabels:
      app: account
  template:
    metadata:
      labels:
        app: account
    spec:
      containers:
        - name: account
          image: sonufrienko/academy-account:latest
          resources:
            requests:
              cpu: 500m
              memory: 200Mi
          ports:
            - containerPort: 3000
