kubernetes/comments-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-deployment
  labels:
    app: comments
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: sonufrienko/academy-comments:latest
          resources:
            requests:
              cpu: 500m
              memory: 300Mi
          ports:
            - containerPort: 3000
