kubernetes/account-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: account
  name: account-deployment
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: account
status:
  loadBalancer: {}
