kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: default-ingress
  namespace: default
spec:
  rules:
    - http:
        paths:
          - path: /v1/account
            pathType: Prefix
            backend:
              service:
                name: account-service
                port:
                  number: 80
          - path: /v1/comments
            pathType: Prefix
            backend:
              service:
                name: comments-service
                port:
                  number: 80
          - path: /v1/courses
            pathType: Prefix
            backend:
              service:
                name: courses-service
                port:
                  number: 80
